# trending-papers-api

./: .gitignore  DEPLOYMENT.md  README.md  nixpacks.toml  pyproject.toml  requirements.txt
app/: main.py
app/api/: endpoints.py
app/models/: schemas.py
app/services/: mcp_client.py
app/utils/: helpers.py
trending-papers-app/: requirements.txt
